[package]
name = "solana-boomerang"
version = "0.0.1"
description = "Implementation-agnostic Solana program test harness" 
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
cargo_metadata = "0.18.1"
libtest-mimic = "0.6"
serde_json = "1.0.111"
solana-boomerang-client = { version = "0.0.1", path = "./client" }
solana-boomerang-test-validator = { version = "0.0.1", path = "./test-validator" }
solana-sdk = "1.17.15"
