[package]
name = "solana-address-lookup-table-program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bincode = "1.3.3"
bytemuck = "1.14.0"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
solana-frozen-abi = "1.17.15"
solana-frozen-abi-macro = "1.17.15"
solana-program = "1.17.15"
spl-pod = "0.1.0"
spl-program-error = "0.3.0"

[dev-dependencies]
solana-boomerang = { version = "0.1.0", path = "../../lib" }
solana-sdk = "1.17.15"

# Needed for `boomerang`
[[test]]
name = "main"
path = "tests/main.rs"
harness = false
